# AdventOfCode

./: .gitignore  README.md
2019/: flake.nix  hs_shell.nix  py_shell.nix
2019/Day1/Haskell/: HelloWorld.hs  P1.hs  P2.hs
2019/Day1/Haskell/HelloWorld/: GUIFun.hs  HelloWorld.hs  HelloWorldTests.hs  HigherOrderism.hs  Recursion.hs
2019/Day19/: P1.hs  shell.nix
2019/Day4/: P1.hs
2020/: adventofcode2020.html
2020/Day1/C/: read
2020/Day1/python/: IOtests.py
2020/Day2/: puzzle1.c
2020/Day3/C/: Day3  Day3.c
2020/Day5/: Day5.py
2020/Day6/: tempCodeRunnerFile.py
2021/: adventofcode2021.html
2021/day1/: day1.py  day2.js
2023/haskell/day1/: Main.hs  flake.nix
Day1/C/: puzzle1.c  puzzle2  puzzle2.c  tempCodeRunnerFile.c
Day1/python/: puzzle1.py  puzzle1_x3bla.py
Day2/: part2  part2.c  puzzle1
Day3/: .~lock.input.txt#  part1.py
Day3/python/: day3.py
Day4/: Day4.py  input_tmp.txt
Day6/: Day6.py
rust_2021/: Cargo.toml
rust_2021/day1/: day1.js  package-lock.json
rust_2021/day2/: main.rs
rust_2021/day3/: main.rs
rust_2021/day4/: main.rs
rust_2021/day5/: main.rs
